--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,17 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wno-deprecated")
 endif()
 
+if(MSVC)
+    #vc 2012 fix for vararg templates
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_VARIADIC_MAX=10")
+endif()
+
+if(WIN32)
+    set(_OPT_CMAKE_ARGS "-Dgtest_force_shared_crt=ON;-DCMAKE_SH=CMAKE_SH-NOTFOUND")
+else()
+    set(_OPT_CMAKE_ARGS "")
+endif()
+
 # Will download external CMakeable project from git repo, branch "master" and install it in $DEPS_ROOT
 # This also will create "googletest.git" target, which we'll use as dependency for our test project
 ExtProjectGit("https://github.com/google/googletest.git" "master" ${DEPS_ROOT} CMAKE_ARGS "${_OPT_CMAKE_ARGS}")
@@ -45,5 +56,5 @@ foreach(_test_file ${TEST_SRC_FILES})
     set_tests_properties(${_test_name} PROPERTIES TIMEOUT 5)
 endforeach()
 
-add_subdirectory(src)
+#add_subdirectory(src)
 
