--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,17 +44,19 @@ set(COMMON_INCLUDES ${PROJECT_SOURCE_DIR}/include)
 enable_testing()
 include_directories(${COMMON_INCLUDES})
 
+file(GLOB SRC_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)
+ADD_LIBRARY(${PROJECT_NAME_STR}_objects OBJECT ${SRC_FILES})
+ADD_EXECUTABLE(${PROJECT_NAME_STR} $<TARGET_OBJECTS:${PROJECT_NAME_STR}_objects> ${PROJECT_SOURCE_DIR}/main/main.cpp)
+
 file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
 
 # from list of files we'll create tests test_name.cpp -> test_name
 foreach(_test_file ${TEST_SRC_FILES})
     get_filename_component(_test_name ${_test_file} NAME_WE)
-    add_executable(${_test_name} ${_test_file})
+    add_executable(${_test_name} ${_test_file} $<TARGET_OBJECTS:${PROJECT_NAME_STR}_objects>)
     add_dependencies(${_test_name} "googletest.git")
     target_link_libraries(${_test_name} gtest gtest_main ${CMAKE_THREAD_LIBS_INIT})
     add_test(${_test_name} ${_test_name})
     set_tests_properties(${_test_name} PROPERTIES TIMEOUT 5)
 endforeach()
-
-#add_subdirectory(src)
 
